--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,14 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0;url=demo/index.html" />
-    <title>icon-toggle</title>
+    <title>Index</title>
   </head>
   <body>
-    <!--
-        Visit demo/index.html to see live examples of your element running.
-        This page will automatically redirect you there when run in the browser
-        with `polymer serve --open`.
-      -->
+    Hello World
   </body>
 </html>
